--- a/MyPixyMain/style.css
+++ b/MyPixyMain/style.css
@@ -8,3 +8,43 @@ and open the template in the editor.
     Author     : Sarah
 */
 
+* {
+    margin:0;
+    padding:0;
+    border:0;
+}
+
+body {
+    background:#585858;
+    margin:0;
+    font-family:Verdana, Tahoma, Arial, sans-serif;
+    font-size:11px;
+    color:#232323;
+}
+
+
+
+
+/* Standarddefinitionen */
+a:link, a:visited, a:active, a:focus {
+    text-decoration:underline;
+    color:#FF0000;
+}
+a:hover { 
+    text-decoration:none;
+}
+
+.left {
+    float:left;
+}
+
+.right {
+    float:right;
+}
+
+.clear {
+    clear:both;
+    height:1px;
+    font-size:1px;
+    line-height:1px;
+}
