--- a/MyPixyMain/style.css
+++ b/MyPixyMain/style.css
@@ -1,50 +1,98 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
 /* 
     Created on : 02.11.2015, 11:27:16
-    Author     : Sarah
+    Author     : Sarah Bauert
 */
 
-* {
-    margin:0;
-    padding:0;
-    border:0;
-}
+/*****************************************************************************
+ * Global Settings
+ ********************************************************************************************************************
+ * CSS Reset 
+ *******************************************************************************************************************/ 
+    html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+    a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp,
+    small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
+    fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
+        margin: 		0;
+        padding:		0;
+        border: 		0;
+        outline: 		0;
+        vertical-align: 	middle;
+        background: 		transparent;
+        text-decoration: 	none;
+    }
 
-body {
-    background:#585858;
-    margin:0;
-    font-family:Verdana, Tahoma, Arial, sans-serif;
-    font-size:11px;
-    color:#232323;
-}
+/*** Grundlegende CSS Einstellungen ********************************************************************************/		
+    html{
+        height:                 100%
+    }
+    body{
+        font-family:		Century Gothic, Verdana, Tahoma, Arial, sans-serif;
+        font-size:		12px;
+        background-color:	#585858;
+        text-align:		left;
+        color:                  #232323;
+        height:                 100%;
+        width:                  100%;
+        margin:                 auto;
+    }
+    #main{
+        background-color:	#e0e0e0;
+        float:			left;
+        padding:		20px 20px 10px;
+        width:                  auto;
+        min-height: 		65%;
+        margin:                 4%;
+    }
+    a:link, a:visited, a:active, a:focus {
+        text-decoration:        none;
+        color:                  green;
+    }
+
+/************ Header */
+    #header{
+        height:			70px;
+        background-color:	#000000;
+        color: 			white;
+        padding:		20px 5px 10px 10px;
+    }
+    #logo{
+        height:			70px;
+        margin:			0px 20px;
+    }
+
+/************ Navigation */
+    #menu {
+	width: 			100%;
+        height:                 30px;
+	background-color: 	#333333;		
+	text-align: 		center;
+        font-size:              15px;
+    }
+    #menu a:link, #menu a:visited {
+        text-decoration:        none;
+        color:                  #ffffff;
+    }
+    a:active, a:focus{
+        
+    }
+    #menu a:hover { 
+        text-decoration:        none;
+        color:                  chartreuse;
+    }
+
+/** Content-Pages *************************************************************************************************/
+/****************** Startseite  ******************/
+    div p{
+        margin-top:		20px;
+        margin-bottom:		10px;
+        font-size:              15px;
+    }
+    h2{
+        color:                  green;
+    }
 
 
 
 
-/* Standarddefinitionen */
-a:link, a:visited, a:active, a:focus {
-    text-decoration:underline;
-    color:#FF0000;
-}
-a:hover { 
-    text-decoration:none;
-}
 
-.left {
-    float:left;
-}
 
-.right {
-    float:right;
-}
-
-.clear {
-    clear:both;
-    height:1px;
-    font-size:1px;
-    line-height:1px;
-}
